admin list in progress

--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -67,3 +67,8 @@ div.activity span {
 {
 	color: #fefefe
 }
+.admin-add-button{
+	padding: 2px 20px;
+    margin-top: -3px;
+    border-radius: 3px;
+}
