user section almost completed

--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -72,3 +72,12 @@ div.activity span {
     margin-top: -3px;
     border-radius: 3px;
 }
+.delete-form{
+	display: inline-block;
+}
+.datatable-action{
+	width: 25px;
+	border-radius: 1px;
+	margin-left: 2px;
+	text-align: center;
+}
